--- a/doc/pubs/IEEE-CEC2016/tex/intro.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/intro.tex
@@ -51,7 +51,8 @@ The SCE is a metaheuristic proposed by Duan in \cite{duan1992effective}
 which combines the ideas of a controlled random search with the concepts
 of competitive evolution and shuffling.
 The SCE algorithm has been successfully used to solve several problems
-like flow shop scheduling~\cite{zhao2014shuffled} and project management~\cite{elbeltagi2007modified}.
+like flow shop scheduling~\cite{zhao2014shuffled}, project management~\cite{elbeltagi2007modified}
+and MKP~\cite{baroni2015shuffled}.
 
 In this paper we address the development of a hybrid heuristic for the MKP.
 The size of the problem instance is first reduced through a variable fixing
