--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -386,6 +386,17 @@ doi = {10.1016/j.ejor.2004.01.024},
 masid = {2141142}
 }
 
+@article{vimont2008reduced,
+  title={Reduced costs propagation in an efficient implicit enumeration for the 01 multidimensional knapsack problem},
+  author={Vimont, Yannick and Boussier, Sylvain and Vasquez, Michel},
+  journal={Journal of Combinatorial Optimization},
+  volume={15},
+  number={2},
+  pages={165--178},
+  year={2008},
+  publisher={Springer}
+}
+
 @article{Puchinger2010,
 author = {Jakob Puchinger and Günther R. Raidl and Ulrich Pferschy},
 title = {{The Multidimensional Knapsack Problem: Structure and Algorithms}},
@@ -930,4 +941,25 @@ masid = {694811}
   pages={1--41},
   year={2009},
   publisher={Springer}
+}
+
+@incollection{baroni2015shuffled,
+  title={A Shuffled Complex Evolution Algorithm For the Multidimensional Knapsack Problem},
+  author={Baroni, Marcos Daniel Valad{\~a}o and Varej{\~a}o, Fl{\'a}vio Miguel},
+  booktitle={Progress in Pattern Recognition, Image Analysis, Computer Vision, and Applications},
+  pages={768--775},
+  year={2015},
+  publisher={Springer}
+}
+
+
+@article{della2012improved,
+  title={Improved core problem based heuristics for the 0/1 multi-dimensional knapsack problem},
+  author={Della Croce, Federico and Grosso, Andrea},
+  journal={Computers \& Operations Research},
+  volume={39},
+  number={1},
+  pages={27--31},
+  year={2012},
+  publisher={Elsevier}
 }
