--- a/doc/pubs/IEEE-CEC2016/tex/paper.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/paper.tex
@@ -25,6 +25,8 @@
    \end{minipage}
    \end{lrbox}\noindent\fbox{\usebox{\ieeealgbox}}}
 
+\newcommand{\scecore}{SCEcr }
+
 \begin{document}
 
 \title{ \vspace{0.25in}
