--- a/doc/pubs/IEEE-CEC2016/tex/sce.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/sce.tex
@@ -75,7 +75,6 @@ the stop condition is a fixed amount of $K$ evolving steps.
   \label{fig:flow1}
 \end{figure}
 
-
 \subsection{The shuffled complex evolution for the MKP}
 \label{subsec:scemkp}
 
@@ -84,7 +83,8 @@ optimization problem.
 The only steps needed to be specified is (a) the creation of a new random
 solution and (b) the crossing procedure of two solutions.
 These two procedures for the MKP are respectively presented by algorithms on
-Fig.~\ref{alg:new} and Fig.~\ref{alg:cross}.
+Fig.~\ref{alg:new} and Fig.~\ref{alg:cross}. Thoses are the same procedures
+specified in \cite{baroni2015shuffled}.
 
 \begin{figure}
 \begin{algorithmic}[1]
