versao final cec2016

--- a/doc/pubs/IEEE-CEC2016/tex/paper.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/paper.tex
@@ -75,6 +75,7 @@ demanding a very small amount of processing time.
 \label{sec:sce}
 \input{sce.tex}
 
+\clearpage
 \section{Computational experiments}
 \label{sec:exp}
 \input{compexp.tex}
