flush end no final de CEC2016

--- a/doc/pubs/IEEE-CEC2016/tex/paper.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/paper.tex
@@ -11,6 +11,8 @@
 \usepackage{array}         % better padding of cell content of tabulars
 \usepackage[skip=2pt,font=footnotesize]{caption}
 
+\usepackage{flushend}     % para usar flushend (no final)
+
 \usepackage{tikz}       % for flowcharts
 \usetikzlibrary{shapes, arrows}
 
@@ -92,6 +94,7 @@ demanding a very small amount of processing time.
 \bibliography{../../../refs}
 
 %\printbibliography
+\flushend
 
 \end{document}
 
