corrigida tabela IEEE-CEC2016

--- a/doc/pubs/IEEE-CEC2016/tex/compexp.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/compexp.tex
@@ -95,10 +95,10 @@ SCE the quality decreased considerably.
 Table~\ref{tab:gk} shows the performance of \scecore on the Glover-Kochenberger set of instances.
 Each instance in the set was executed 10 times.
 Columns \textit{n} and \textit{m} indicate the size of each instance.
-The \textit{SCE time} column shows the average execution time of SCE algorithm.
+The \textit{SCEcr time} column shows the average execution time of SCEcr algorithm.
 The \textit{quality} column shows the average ratio of the solution found by \scecore and
 the best known solution of each instance.
-It can be noticed that SCE achieved high quality solutions, at least $99.10\%$
+It can be noticed that SCEcr achieved high quality solutions, at least $99.10\%$
 of best known solution, spending very small amount of processing time, compared
 to the time taken to find the best known solutions.
 
@@ -108,7 +108,7 @@ to the time taken to find the best known solutions.
 \fontsize{8.5pt}{1em}\selectfont 
 \begin{center}
 \begin{tabular}{|r|r|r|r|r|} \hline
-		\textbf{\#} & \textbf{n}   & \textbf{m}  & \textbf{SCE time (s)} & \textbf{quality (\%)} \\ \hline
+		\textbf{\#} & \textbf{n}   & \textbf{m}  & \textbf{SCEcr time (s)} & \textbf{quality (\%)} \\ \hline
 01 & 100 & 15 & 0.31 & 99.68 \\ \hline
 02 & 100 & 25 & 0.47 & 99.51 \\ \hline
 03 & 150 & 25 & 0.79 & 99.60 \\ \hline
