--- a/doc/pubs/IEEE-CEC2016/tex/intro.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/intro.tex
@@ -3,11 +3,11 @@ The multidimensional knapsack problem (MKP) is a strongly NP-hard combinatorial
 optimization problem which can be viewed as a resource allocation problem and
 defined as follows:
 
-\begin{align*}
+\begin{align}
   \text{maximize} & \sum_{j=1}^n p_j x_j \\
   \text{subject to} & \sum_{j=1}^n w_{ij} x_j \leqslant c_i \quad i \in \{1, \ldots, m\}\\
    & x_j \in \{0, 1\}, \quad j \in \{1, \ldots, n\}.
-\end{align*}
+\end{align}
 
 % Define the MKP
 The problem can be interpreted as a set of $n$ items with profits $p_j$
