--- a/doc/pubs/IEEE-CEC2016/tex/paper.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/paper.tex
@@ -35,18 +35,18 @@
 A shuffled complex evolution algorithm for
 the multidimensional knapsack problem using core concept}
 
-%\author{\IEEEauthorblockN{Marcos Daniel Valad\~ao Baroni}
-%\IEEEauthorblockA{ Departamento de Inform\'atica\\
-%Universidade Federal do Esp\'irito Santo\\
-%Vit\'oria, Esp\'irito Santo, Brazil\\
-%Email: mbaroni@ninfa.inf.ufes.br }
-%\and
-%\IEEEauthorblockN{Fl\'avio Miguel Varej\~ao}
-%\IEEEauthorblockA{ Departamento de Inform\'atica\\
-%Universidade Federal do Esp\'irito Santo\\
-%Vit\'oria, Esp\'irito Santo, Brazil\\
-%Email: fvarejao@ninfa.inf.ufes.br }
-%}
+\author{\IEEEauthorblockN{Marcos Daniel Valad\~ao Baroni}
+\IEEEauthorblockA{ Departamento de Inform\'atica\\
+Universidade Federal do Esp\'irito Santo\\
+Vit\'oria, Esp\'irito Santo, Brazil\\
+Email: mbaroni@ninfa.inf.ufes.br }
+\and
+\IEEEauthorblockN{Fl\'avio Miguel Varej\~ao}
+\IEEEauthorblockA{ Departamento de Inform\'atica\\
+Universidade Federal do Esp\'irito Santo\\
+Vit\'oria, Esp\'irito Santo, Brazil\\
+Email: fvarejao@ninfa.inf.ufes.br }
+}
 
 \maketitle
 
@@ -60,8 +60,8 @@ This concept is used to reduce the original size of MKP instances.
 %The SCE regards a natural evolution happening simultaneously in independent communities.
 The performance of the SCE applied to the reduced MKP is verified through computational experiments
 using well-known instances from literature.
-The approach proved to be very effective in finding near optimal solutions
-demanding a very small amount of processing time.
+The approach proved to be effective in finding near optimal solutions
+demanding a small amount of processing time.
 \end{abstract}
 \IEEEpeerreviewmaketitle
 
@@ -77,11 +77,9 @@ demanding a very small amount of processing time.
 \label{sec:sce}
 \input{sce.tex}
 
-\clearpage
 \section{Computational experiments}
 \label{sec:exp}
 \input{compexp.tex}
-
 
 \section{Conclusions and future remarks}
 \label{sec:conc}
