--- a/doc/pubs/IEEE-CEC2016/tex/sce.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/sce.tex
@@ -35,7 +35,7 @@ individual $(M+1)$-th goes back to the first complex, etc.
 
 The next step after shuffling the complexes is to evolve each complex through
 a given fixed amount of $K'$ steps.
-The individuals in each complex are sorted by descending order of fitness quality.
+The individuals in each complex are sorted by descending order of fitness.
 In each step a subcomplex of $P$ individuals is selected from the
 complex using a triangular probability distribution, where the $i$-th individual
 has a probability $p_i = \frac{2(n+1-i)}{n(n+1)}$ of being selected.
@@ -58,7 +58,7 @@ This last step is important to prevent the algorithm becoming trapped in local m
 Fig.~\ref{fig:flow2} presents the evolving procedure described above in a flowchart diagram.
 
 After evolving all the $N$ complexes the whole population is again
-sorted by descending order of fitness quality and the process continues until
+sorted by descending order of fitness and the process continues until
 a stop condition is satisfied.
 Fig.~\ref{fig:flow1} shows the SCE algorithm in a flowchart diagram in which
 the stop condition is a fixed amount of $K$ evolving steps.
@@ -133,7 +133,6 @@ After trying to place all available items the new solution is returned.
 \label{alg:cross}
 \end{figure}
 
-\newpage
 The crossing procedure (Fig.~\ref{alg:cross}) takes as input the worst
 solution taken from the subcomplex $x^w = (x^w_1, x^w_2, \ldots, x^w_n$),
 the selected better solution $x_b = (x^b_1, x^b_2, \ldots, x^b_n$)
