emails no cabeçalho de CEC2016 corrigidos

--- a/doc/pubs/IEEE-CEC2016/tex/paper.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/paper.tex
@@ -39,13 +39,13 @@ the multidimensional knapsack problem using core concept}
 \IEEEauthorblockA{ Departamento de Inform\'atica\\
 Universidade Federal do Esp\'irito Santo\\
 Vit\'oria, Esp\'irito Santo, Brazil\\
-Email: mbaroni@ninfa.inf.ufes.br }
+Email: marcos.baroni@aluno.ufes.br }
 \and
 \IEEEauthorblockN{Fl\'avio Miguel Varej\~ao}
 \IEEEauthorblockA{ Departamento de Inform\'atica\\
 Universidade Federal do Esp\'irito Santo\\
 Vit\'oria, Esp\'irito Santo, Brazil\\
-Email: fvarejao@ninfa.inf.ufes.br }
+Email: fvarejao@inf.ufes.br }
 }
 
 \maketitle
