ferramenta para pegar melhor solucao das instancias chubeasly.

--- a/doc/pubs/IEEE-CEC2016/tex/concl.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/concl.tex
@@ -20,7 +20,7 @@ for every instance.
 The variable fixing procedure also brought robustness for the method, as the quality
 of the solution found increased in case of larger instances.
 
-The hybrid heuristic developed in this papter is very well suitable if it is necessary
+The hybrid heuristic developed in this paper is very well suitable if it is necessary
 to compute a good solution in a small processing time.
 The hybrid heuristic could achieved $99.61\%$ on average of quality of the best known solution for
 the 270 Chu-Beasley instances and $99.46\%$ on average for the Glover-Kochenberger instances.
